# autogen_experiments

./: .env.example  .gitignore  Dockerfile  OAI_CONFIG_LIST.example  README.md  docker-compose.yml  pyproject.toml
app/: agents.py  app_logging.py  env_var.py  main.py  stream_interceptor.py  utils.py
app/gh/: pygithub.py
app/linter_subprocess/: linters.py
app/llm/: perplexity.py  perplexity_functions.py
app/repo_query/: config.json  data_persistence.py  env_and_config.py  repo_processing.py
app/resources/: ask_mermaid_expert_description.txt  ask_mermaid_expert_message.txt  ask_planner_description.txt  ask_planner_message.txt  chat_message.md  foldername.txt  mermaid_expert_system_message.txt  planner_system_message.txt  test.txt
